# jhu-magnet-dkps

./: README.md  pyproject.toml  run.sh
jhu_ta1/algorithms/: claim_helpers.py  dkps_instance_predictor.py  dkps_run_predictor.py
jhu_ta1/cards/: jhu_instance_predict_auc.yaml  jhu_run_predict_query_efficiency.yaml  jhu_run_predict_query_efficiency_mae.yaml
